--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="items_count">Item\'s count: %s</string>
     <string name="sugar_eaten">Sugar eaten: %.3fkg</string>
     <string name="action_settings">Settings</string>
+    <string name="empty_error">Cannot be empty</string>
 </resources>
